# filter

./: .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  waf  wscript
examples/: example.cpp  wscript_build
src/filter/: kalman.hpp  wscript_build
test/: filter_tests.cpp  wscript_build
test/src/: test_kalman.cpp
